<?xml version="1.0"?>

<resources>

    <string name="app_name">VCA</string>

    <string name="microphone">MICROPHONE</string>

    <string name="audiofeatures">AUDIO FEATURES</string>

    <string name="homefeatures">HOME FEATURES</string>

    <string name="services">SERVICES</string>

    <string name="miscellaneous">MISC</string>

    <string name="time">TIME</string>

    <string name="weather">WEATHER</string>

    <string name="music">PLAY MUSIC</string>

    <string name="lights">LIGHTS</string>

    <string name="heating">HEATING</string>

    <string name="camera">CAMERA</string>

    <string name="game">GAME</string>

    <string name="calendar">CALENDAR</string>

    <string name="takeaway">TAKE AWAY</string>

    <string name="shopping">SHOPPING</string>

    <string name="taxi">TAXI</string>

    <string name="scanneddevices">Scanned Devices</string>

    <string name="connecteddevices">Connected Devices</string>

    <string name="sweetnsour">SWEET AND SOUR DISHES</string>

    <string name="sweetnsourchicken">Sweet And Sour Chicken</string>

    <string name="pricesweetnsourchicken">€7.90 </string>

    <string name="add">add</string>

    <string name="sweetnsourprawn">Sweet And Sour Prawn</string>

    <string name="pricesweetnsourprawn"> €9.00</string>

    <string name="sweetnsourpork">Sweet And Sour Pork</string>

    <string name="pricesweetnsourpork"> €7.90</string>

    <string name="suborder">SUB ORDER</string>

    <string name="chooseone">CHOOSE ONE</string>

    <string-array name="menuItems">
        <item>Sweet and Sour Chicken</item>
        <item>Sweet and Sour Prawn</item>
        <item>Sweet and Sour Pork</item>
    </string-array>

    <string-array name="menuItemPrices">
        <item>7.90</item>
        <item>9.00</item>
        <item>7.90</item>
    </string-array>

    <string-array name="subOrderItems">
        <item>Fried Rice</item>
        <item>Fried Noodles</item>
    </string-array>

    <string-array name="subOrderPrices">
        <item>0.50</item>
        <item>1.50</item>
    </string-array>

    <string-array name="shoppingItems">
        <item>Bread</item>
        <item>Milk</item>
        <item>Eggs</item>
    </string-array>

    <string-array name="shoppingPrices">
        <item>1.50</item>
        <item>1.00</item>
        <item>3.00</item>
    </string-array>


    <string name="title_activity_taxi">TaxiActivity</string>

    <string name="taxiservice">TAXI SERVICE</string>

    <string name="name">Name: </string>

    <string name="address">Address: </string>

    <string name="phone">Phone: </string>

    <string name="pickuptime">Pickup Time: </string>

    <string name="date">Date: </string>

    <string name="hintname">Name: </string>

    <string name="hintaddress">Address: </string>

    <string name="hintphone">Phone: </string>

    <string name="hintpickupdate">Pickup Date: </string>

    <string name="hintpickuptime">Pickup Time: </string>

    <string name="enter">ENTER: </string>

    <string name="bread">Bread</string>

    <string name="milk">Milk</string>

    <string name="eggs">Eggs</string>

    <string name="addtobasket">ADD TO BASKET</string>

    <string name="yourorder">YOUR TAKEAWAY ORDER</string>

    <string name="purchase">PURCHASE</string>

    <string name="total">TOTAL</string>

    <string name="fullname">NAME: </string>

    <string name="customerAddress">ADDRESS: </string>

    <string name="customerPhone">PHONE: </string>

    <string name="Basket">Basket</string>

    <string name="checkout">CHECKOUT</string>

    <string name="pay">PAY</string>

    <string name="order">ORDER</string>

</resources>