<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TakeawayOrder">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        >

        <TextView android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourorder"
            android:textSize="20sp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="60sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:orientation="horizontal"
    android:id="@+id/linearLayout3">

    <TextView
        android:id="@+id/mainItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:textSize="15sp"
        android:layout_gravity="left"

        />

        <TextView
            android:id="@+id/itemprice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="15sp"
            android:layout_gravity="right"
            />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/linearLayout5"
        >

        <TextView
            android:id="@+id/subItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/subPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6"
        >


        <EditText
            android:id="@+id/etTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/total"
            android:inputType="time" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7"
        >

        <TextView android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="15sp"
            android:layout_gravity="bottom|center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout8"
        >

        <TextView android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerAddress"
            android:textSize="15sp"
            android:layout_gravity="bottom|center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout9"
        >

        <TextView android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerPhone"
            android:textSize="15sp"
            android:layout_gravity="bottom|center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/enter"
            android:text="@string/purchase"
            android:backgroundTint="@color/white"
            />

    </LinearLayout>

</LinearLayout>