<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
    tools:context="com.example.asus.vca.HomeActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        >

        <Button
            android:id="@+id/buttonLights"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:drawableStart="@drawable/lights"
            android:padding="10dp"
            android:text="@string/lights" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="191dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/buttonHeating"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:drawableStart="@drawable/heating"
            android:padding="10dp"
            android:text="@string/heating" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="74dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:drawableStart="@drawable/camera"
            android:padding="10dp"
            android:text="@string/camera" />

    </LinearLayout>

</RelativeLayout>